--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="../static/style.css">
     <title>Login</title>
 </head>
 <body>
@@ -14,6 +14,6 @@
         <input id="input-userP" type="password" placeholder="PassWord"/>
         <button id="login"> Login </button>
     </div>
-    <script src="{{ url_for('static', filename='login.js') }}"></script>
+    <script src="../static/login.js"></script>
 </body>
 </html>
