--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <title> Attendance Form </title>
 </head>
 <body>
@@ -20,69 +21,42 @@
             <option>Male</option>
             <option>Female</option>
         </select>
-
-        <label>Is student absent?</label>
-        <input type="checkbox" class="absent" id="absent">
-
-        <button type="button" id="form"> Submit Form </button>
+        <div id="absent1">
+            <input type="checkbox" id="absent">
+            <label> Mark Student Absent </label>
+        </div>
+        <div id="sick1">
+            <input type="checkbox" id="sick">
+            <label> Mark Student Sick </label>
+        </div>
+        <button type="button" id="form"> CheckOut Attendance </button>
     </form>
-    
+
+    <div id="checkout">
+
+        <h1 id="names"></h1>
+
+        <div class="details">
+            <p>Matriculation Number</p>
+         <p id="matric"></p>
+        </div>
+
+       <div class="details">
+        <p >Gender</p>
+         <p id="genderText"> </p>
+       </div>
+
+        <div class="details">
+            <p> Status </p>
+            <p id="absentText"></p>
+        </div>
+        <div class="details">
+            <p> Health Status </p>
+            <p id="sickText"></p>
+        </div>
+        <button id="submitAttendance"> Submit Attendance </button>
+    </div>
+    <script src="../static/index.js"></script>
    </div>
 </body>
-<script>
-    const theForm = document.getElementById("form")
-    var fname = document.getElementById("input-text")
-    var lName = document.getElementById("input-text-1")
-    var matricNum = document.getElementById("input-text-2")
-    var gender = document.getElementById("gender")
-    var absent = document.querySelector(".absent").checked
-
-    const data = {
-        first_name : fname.value,
-        last_name : lName.value,
-        matric_num : matricNum.value,
-        gender : gender.value,
-        status : absent
-    }
-
-    const jsonData = JSON.stringify(data);
-
-    function validate() {
-        let status = true
-        if(fname.value == ''){
-            fname.style.borderColor = 'red'
-            status = false
-        }
-        if( lName.value == ''){
-            lName.style.borderColor = 'red'
-            status = false
-        }
-        if(matricNum.value == ''){
-            matricNum.style.borderColor = 'red'
-            status = false
-        }
-        console.log(absent)
-        return status
-    }
-
-    theForm.addEventListener("click", (event) => {
-        event.preventDefault();
-        fetch('/people', {
-            method: 'POST',
-            body: jsonData,
-            headers: {
-                'Content-Type': 'application/json'
-            }
-        })
-        .then(() => console.log(jsonData))
-        .then(response => response.json())
-        .then(data => console.log(data))
-        if (validate()){
-            document.getElementById("names").innerText = fname.value + " " + lName.value;
-            document.getElementById("matric").innerText = matricNum.value;
-            document.getElementById("genderText").innerText = gender.value;
-            document.getElementById("absentText").innerText = absent ? 0 : 1;
-        }
-    })
-</script>
 </html>
