success in backend connection

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <div class="app">
+        <button id="adminLogin"> Login As Admin </button>
     <h1>Attendance Form</h1>
     <form>
         <input id="input-text" type="text" placeholder="Enter Student First Name" required/>
