--- a/static/style.css
+++ b/static/style.css
@@ -170,3 +170,13 @@
 #absentText{
     font-weight: bold;
 }
+
+#adminLogin{
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    color: white;
+    font-size: large;
+    background-color: green;
+}
