--- a/templates/adminPage.html
+++ b/templates/adminPage.html
@@ -27,6 +27,10 @@
 
         <h1 class="attendance"> Attendance Statistics </h1>
 
+            <div id="stats-button">
+                <a href="/admin">Back to Stats Page</a>
+            </div>
+            
         <div id="attendanceDetails">
            <div id="attendance--days">
                     <p> Total Class Days</p>
