--- a/templates/adminPage.html
+++ b/templates/adminPage.html
@@ -32,22 +32,31 @@
             </div>
             
         <div id="attendanceDetails">
+
            <div id="attendance--days">
                     <p> Total Class Days</p>
                     <p id="attendance--daysnum"> 120 </p>
            </div>
 
+
            <div id="absent--days">
                 <p id="absent--text"> Total Students </p>
                 <p id="absent--daysnum"> 30 </p>
-       </div>
+            </div>
 
        <div id="sick--days">
             <p id="sick--text"> Semester</p>
             <p id="sick--daysnum"> Second Semester </p>
        </div>
+
+       
+       <div id="present--days">
+        <p id="present--text"> Total Class Days</p>
+        <p id="present"> 50 </p>  
+    </div>
+
    </div>
-        </div>
+</div>
         <div id="chart"></div>
         <div id="chart1"></div>
         <div id="donut"></div>
