--- a/templates/adminPage.html
+++ b/templates/adminPage.html
@@ -4,53 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/adminpage.css">
+    <link rel="stylesheet" href="./output.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
 
     <title>Admin Stats</title>
 </head>
 <body>
     <div class="admin">
+        <header class="bg-green-color px-5 py-3 flex justify-between">
+            <h1 class="text-white text-2xl uppercase font-semibold"> Welcome to the admin page </h1>
+            <div class="text-green-color flex space-x-5 items-center">
+                <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Mark an Attendance </a>
+                <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Register a Student </a>
+                <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Download Statistics CSV <span> <i class="ri-download-2-line"></i> </span> </a>
+            </div>
+        </header>
+       
+        <div class="text-center my-4">
+                <input class="border-green-color shadow border w-[500px] text-xl px-4 py-2 outline-green-color text-green-color rounded" type="text" id="myInput" placeholder="Search for students.." title="Type in a name">
 
-        <h1 class="wel"> Welcome to the admin page </h1>
-
-        <div class="searchList">
-            <input type="text" id="myInput" placeholder="Search for students.." title="Type in a name">
-            <ul id="myUL">
-                
-              </ul>
+           <div id="list">
+            
+           </div>
         </div>
 
-        <h1 class="attendance"> Attendance Statistics </h1>
+        <h1 class="text-2xl uppercase text-green-color text-center font-semibold my-5"> Attendance Statistics </h1>
 
             <div id="stats-button">
                 <a href="/admin">Back to Stats Page</a>
             </div>
             
-        <div id="attendanceDetails">
+        <div id="attendanceDetails" class="text-center border mx-60 bg-green-color rounded px-24 shadow">
 
-           <div id="attendance--days">
+           <div id="attendance--days" class="flex  justify-between text-xl text-white my-2 font-semibold">
                     <p> Total Class Days</p>
                     <p id="attendance--daysnum"> 120 </p>
            </div>
 
 
-           <div id="absent--days">
+           <div id="absent--days" class="flex  justify-between text-xl text-white my-2 font-semibold">
                 <p id="absent--text"> Total Students </p>
                 <p id="absent--daysnum"> 30 </p>
             </div>
 
-       <div id="sick--days">
+       <div id="sick--days" class="flex  justify-between text-xl text-white my-2 font-semibold">
             <p id="sick--text"> Semester</p>
             <p id="sick--daysnum"> Second Semester </p>
        </div>
 
        
-       <div id="present--days">
+       <div id="present--days" class="flex  justify-between text-xl text-white my-2 font-semibold">
         <p id="present--text"> Total Class Days</p>
         <p id="present"> 50 </p>  
     </div>
@@ -60,7 +68,7 @@
         <div id="chart"></div>
         <div id="chart1"></div>
         <div id="donut"></div>
-        <p class="rate"> Rate at which students Attend Class </p>
+        <p class="text-center text-2xl font-semibold text-green-color my-5"> Rate at which students Attend Class </p>
 
         <script type="text/javascript" charset="utf-8" src="../static/script.js"></script>
     </div>
