--- a/templates/adminPage.html
+++ b/templates/adminPage.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.8/xlsx.full.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
 
@@ -21,7 +22,7 @@
             <div class="text-green-color flex space-x-5 items-center">
                 <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Mark an Attendance </a>
                 <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Register a Student </a>
-                <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Download Statistics CSV <span> <i class="ri-download-2-line"></i> </span> </a>
+                <a id="download" class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Download Statistics CSV <span> <i class="ri-download-2-line"></i> </span> </a>
             </div>
         </header>
        
