--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
     <header class="px-7 py-3 bg-green-color flex justify-between">
         <h1 class="uppercase text-2xl text-white font-semibold"> Mark student attendance </h1>
         <div class="text-green-color flex space-x-5 items-center">
-            <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Login As Admin </a>
-            <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Register a Student </a>
+            <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer" href="/login"> Login As Admin </a>
+            <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer" href="/register"> Register a Student </a>
         </div>
     </header>
 
