--- a/templates/RegistrationPage.html
+++ b/templates/RegistrationPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="../static/output.css">
     <title>Registration Page</title>
 </head>
 <body>
@@ -111,6 +111,6 @@
         </div>
 
     </div>
-    <script src="./RegistrationPage.js"></script>
+    <script src="../static/RegistrationPage.js"></script>
 </body>
 </html>
