--- a/templates/RegistrationPage.html
+++ b/templates/RegistrationPage.html
@@ -8,12 +8,16 @@
     <title>Registration Page</title>
 </head>
 <body>
-    <div class="bg-green-color flex justify-between px-7">
+    <div class="bg-green-color flex justify-between px-7 relative">
         <h1 class="px-5 py-3 text-white text-2xl uppercase font-semibold">Register Students</h1>
         <div class="text-green-color flex space-x-5 items-center">
             <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Login As Admin </a>
             <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Mark an Attendance </a>
         </div>
+    </div>
+
+    <div class="bg-green-color w-[400px] fixed my-4 rounded top-20 right-5 shadow-xl transition ease-in-out duration-300 hidden" id="notification">
+        <p class="text-white px-5 py-3 text-xl"> <strong> INFO: </strong> Registration is Successful </p>
     </div>
 
     <div>
