added the gender selection

--- a/templates/RegistrationPage.html
+++ b/templates/RegistrationPage.html
@@ -38,6 +38,13 @@
                     <p class="uppercase text-xl my-auto text-green-color"> Matric Number </p>
                     <input id="input--matricNum" type="text" placeholder="Matric Number" class="border outline-none px-3 py-2 align-middle w-[300px] text-xl"/>
                 </div> 
+                <div class="flex space-x-10 my-4">
+                    <p class="uppercase text-xl text-green-color"> Gender </p>
+                    <fieldset class="flex space-x-5 text-green-color"> 
+                        <input type="radio" name="gender" value="male">Male </input>
+                        <input type="radio" name="gender" value="female">Female</input>
+                    </fieldset> 
+                </div>
                <hr />
                     <h2 class="mt-5 text-2xl uppercase text-green-color">Course List (Check Yes or No if student offer them or Not)</h2>
 
