--- a/templates/RegistrationPage.html
+++ b/templates/RegistrationPage.html
@@ -11,12 +11,12 @@
     <div class="bg-green-color flex justify-between px-7 relative">
         <h1 class="px-5 py-3 text-white text-2xl uppercase font-semibold">Register Students</h1>
         <div class="text-green-color flex space-x-5 items-center">
-            <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Login As Admin </a>
-            <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Mark an Attendance </a>
+            <a href="/admin" class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Admin Page </a>
+            <a href="/" class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Mark an Attendance </a>
         </div>
     </div>
 
-    <div class="bg-green-color w-[400px] fixed my-4 rounded top-20 right-5 shadow-xl transition ease-in-out duration-300 hidden" id="notification">
+    <div class="bg-green-color w-[400px] fixed my-4 rounded top-20 right-5 shadow-xl transition ease-linear duration-300 hidden" id="notification">
         <p class="text-white px-5 py-3 text-xl"> <strong> INFO: </strong> Registration is Successful </p>
     </div>
 
@@ -53,16 +53,16 @@
                             <div class="flex my-5 text-xl space-x-4">
                                 <p class="font-bold text-green-color"> GEDS 420 </p>
                                 <fieldset class="flex space-x-5"> 
-                                    <input type="radio" name="yes-geds_420" value="Yes">Yes </input>
-                                    <input type="radio" name="yes-geds_420" value="No">No</input>
+                                    <input type="radio" name="GEDS_420" value="Yes">Yes </input>
+                                    <input type="radio" name="GEDS_420" value="No">No</input>
                                 </fieldset> 
                             </div>
                    
                             <div class="flex my-5 text-xl space-x-4">
                                 <p class="font-bold text-green-color"> ITGY 402 </p>
                                 <fieldset class="flex space-x-5"> 
-                                    <input type="radio" name="yes-itgy_402" value="Yes">Yes </input>
-                                    <input type="radio" name="yes-itgy_402" value="No">No</input>
+                                    <input type="radio" name="ITGY_402" value="Yes">Yes </input>
+                                    <input type="radio" name="ITGY_402" value="No">No</input>
                                 </fieldset> 
                             </div>
                    
@@ -70,48 +70,48 @@
                             <div class="flex my-5 text-xl space-x-4">
                                 <p class="font-bold text-green-color"> GEDS 400 </p>
                                 <fieldset class="flex space-x-5"> 
-                                    <input type="radio" name="yes-geds_400" value="Yes">Yes </input>
-                                    <input type="radio" name="yes-geds_400" value="No">No</input>
+                                    <input type="radio" name="GEDS_400" value="Yes">Yes </input>
+                                    <input type="radio" name="GEDS_400" value="No">No</input>
                                 </fieldset> 
                             </div>
     
                             <div class="flex my-5 text-xl space-x-4">
                                 <p class="font-bold text-green-color"> ITGY 408 </p>
                                 <fieldset class="flex space-x-5"> 
-                                    <input type="radio" name="yes-itgy_408" value="Yes">Yes </input>
-                                    <input type="radio" name="yes-itgy_408" value="No">No</input>
+                                    <input type="radio" name="ITGY_408" value="Yes">Yes </input>
+                                    <input type="radio" name="ITGY_408" value="No">No</input>
                                 </fieldset> 
                             </div>
     
                             <div class="flex my-5 text-xl space-x-4">
                                 <p class="font-bold text-green-color"> ITGY 312 </p>
                                 <fieldset class="flex space-x-5"> 
-                                    <input type="radio" name="yes-itgy_312" value="Yes">Yes </input>
-                                    <input type="radio" name="yes-itgy_312" value="No">No</input>
+                                    <input type="radio" name="ITGY_312" value="Yes">Yes </input>
+                                    <input type="radio" name="ITGY_312" value="No">No</input>
                                 </fieldset> 
                             </div>
     
                             <div class="flex my-5 text-xl space-x-4">
                                 <p class="font-bold text-green-color"> ITGY 406 </p>
                                 <fieldset class="flex space-x-5"> 
-                                    <input type="radio" name="yes-itgy_406" value="Yes">Yes </input>
-                                    <input type="radio" name="yes-itgy_406" value="No">No</input>
+                                    <input type="radio" name="ITGY_406" value="Yes">Yes </input>
+                                    <input type="radio" name="ITGY_406" value="No">No</input>
                                 </fieldset> 
                             </div>
     
                             <div class="flex my-5 text-xl space-x-4">
                                 <p class="font-bold text-green-color"> COSC 430 </p>
                                 <fieldset class="flex space-x-5"> 
-                                    <input type="radio" name="yes-cosc_430" value="Yes">Yes </input>
-                                    <input type="radio" name="yes-cosc_430" value="No">No</input>
+                                    <input type="radio" name="COSC_430" value="Yes">Yes </input>
+                                    <input type="radio" name="COSC_430" value="No">No</input>
                                 </fieldset> 
                             </div>
     
                             <div class="flex my-5 text-xl space-x-4">
                                 <p class="font-bold text-green-color"> GEDS 002 </p>
                                 <fieldset class="flex space-x-5"> 
-                                    <input type="radio" name="yes-geds_002" value="Yes">Yes </input>
-                                    <input type="radio" name="yes-geds_002" value="No">No</input>
+                                    <input type="radio" name="GEDS_002" value="Yes">Yes </input>
+                                    <input type="radio" name="GEDS_002" value="No">No</input>
                                 </fieldset> 
                             </div>
     
