--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,10 @@
 <body>
     <header class="bg-green-color px-10 py-3 flex justify-between">
         <h1 class=" text-white text-2xl uppercase font-semibold cursor-pointer"> Login Page</h1>
-        <div class="text-green-color flex space-x-5 items-center">
-            <a class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Mark an Attendance </a>
+        <div class="flex space-x-4">
+            <div class="text-green-color flex space-x-5 items-center">
+                <a href="/" class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Mark an Attendance </a>
+            </div>
         </div>
     </header>
     <div class="text-center border mx-10 my-5">
