--- a/templates/login.html
+++ b/templates/login.html
@@ -8,11 +8,11 @@
     <title>Login</title>
 </head>
 <body>
-    <header class="bg-green-color px-10 py-3 flex justify-between">
-        <h1 class=" text-white text-2xl uppercase font-semibold cursor-pointer"> Login Page</h1>
-        <div class="flex space-x-4">
-            <div class="text-green-color flex space-x-5 items-center">
-                <a href="/" class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer"> Mark an Attendance </a>
+    <header class="bg-green-color px-10 py-3 flex justify-between sm:px-2 sm:py-1">
+        <h1 class=" text-white text-2xl uppercase font-semibold cursor-pointer sm:text-xl"> Login Page</h1>
+        <div class="flex">
+            <div class="text-green-color flex space-x-5 items-center sm:space-x-0 sm:justify-between">
+                <a href="/" class="bg-white px-3 py-2 rounded font-semibold transition hover:scale-105 cursor-pointer sm:px-2 sm:py-1 sm:hidden"> Mark an Attendance </a>
             </div>
         </div>
     </header>
